refactor: redesign core architecture, migrate to Logback, and extract API for 2.1.0
Comprehensive architectural overhaul and cleanup for the v2.1.0 release.

⚠️ POTENTIAL BREAKING CHANGES & MIGRATION NOTES:
- `Plugin` contract changed: `Plugin` is now an `interface` instead of an `abstract class` (use `implements Plugin`).
- Subsystem access: Engine components (KnotClassLoader, ModProvider, Registries) must now be resolved via `ServiceManager`.
- API extraction: Internal `api` module has been removed from this repository and extracted into a standalone repo.
- Package reorganization: Several internal core classes have been renamed and reorganized.

Key Improvements & Changes:
- **Architecture & Classloading:**
  - Redesigned mixin pipeline in KnotClassLoader to ensure transformations apply before target class initialization.
  - Promoted `ServiceManager` to the core Service Locator runtime.
- **Dependencies & Logging:**
  - Replaced Tinylog 2 with Logback (Classic) over SLF4J.
  - Removed `jgrapht` dependency (replaced with lightweight internal traversal).
- **Documentation:**
  - Updated existing Wiki docs to reflect new architecture and `Plugin` interface.
  - Added full English documentation (Quick Start, Mixins, Services).