@@ -3,61 +3,72 @@
 </div>
 
 <p align="center">
-    <img alt="PZ Version" src="https://img.shields.io/badge/Project_Zomboid-beta 42+-blue">
-    <img alt="Java version" src="https://img.shields.io/badge/Java-25-orange">
-    <img alt="Avrix Environment" src="https://img.shields.io/badge/Environment-client/server-green">
-    <a href="https://discord.com/invite/PdYtyJMTZN"><img alt="Discord" src="https://img.shields.io/discord/1248698287997976656?logo=discord&logoColor=%23ffffff&logoSize=2&label=Discord&color=%235865F2"></a>
+    <img alt="PZ Version" src="https://img.shields.io/badge/Project_Zomboid-b42+-blue">
+    <img alt="Java Version" src="https://img.shields.io/badge/Java-25-orange">
+    <img alt="Environment" src="https://img.shields.io/badge/Environment-Client%20%7C%20Server-green">
+    <a href="https://discord.gg/PdYtyJMTZN"><img alt="Discord" src="https://img.shields.io/discord/1248698287997976656?logo=discord&logoColor=%23ffffff&label=Discord&color=%235865F2"></a>
     <img alt="GitHub License" src="https://img.shields.io/github/license/Brov3r/Avrix">
 </p>
 
-**Avrix** - is a modern Java-based mod(plugin) loader for Project Zomboid (client and server), powered by mixin
-technology.
-
-> [!NOTE]
-> Avrix Loader is a plugin and mixin loader only — it does not provide a Project Zomboid API.
->
-> All game-specific utilities, events, and helpers are shipped in the optional [Avrix-API](./avrix-api) plugin.
+**Avrix** is a modern, modular Java-based mod loader for Project Zomboid (client and dedicated server), powered by
+on-the-fly mixin bytecode transformation.
 
 ## ✨ Features
 
-* Powered by [mixin technology](https://github.com/SpongePowered/Mixin) (implementation
-  via [ClassTransform](https://github.com/Lenni0451/ClassTransform))
-* Designed for both client and server environments
-* Simple mod installation: just drop the JAR file into the `plugins/` folder
-* Streamlined mod development, following the same patterns as [FabricMC](https://github.com/FabricMC/fabric-loader)
-* Essential API, events, commands, and utilities for mod development — [Avrix-API](./avrix-api)
+* **Mixin Technology:** Native support for Sponge-style mixin annotations powered
+  by [ClassTransform](https://github.com/Lenni0451/ClassTransform) and ASM bytecode manipulation.
+* **Unified Classloading:** Flat knot-classloader architecture ensuring zero classloader visibility barriers and fast
+  class resolution.
+* **Universal Environment:** Works out of the box on both graphical clients and headless dedicated servers (Windows,
+  Linux, macOS).
+* **Automated Dependency Resolution:** Strict semantic versioning (SemVer) validation and DAG topological sort for
+  plugin load order.
+* **Zero-Friction Modding:** Drop plugin `.jar` files into the `plugins/` directory to load them.
 
-## 📚 WIKI
+## 📚 Documentation
 
-In the documentation section, you can select the language that suits you and find out how to quickly start working with Avrix.
+Visit the official documentation to choose your preferred language and get detailed guides on installation,
+configuration, and plugin development:
 
-[📄Open the documentation](./wiki/wiki-language.md "Wiki")
+[📄 Open Documentation](./wiki/wiki-language.md "Avrix Wiki")
 
-## 🚀Quick Start
+## 🚀 Quick Start
 
-1) ⬇️ Download the executable Jar file from
-   the [releases page](https://github.com/Brov3r/Avrix/releases "Release")
-2) 📁 Move the downloaded files to the root folder of the client/server
-3) 💡 Run the downloaded `JAR file` using the CMD run command:
+1. ⬇️ Download the latest executable JAR from the [Releases Page](https://github.com/Brov3r/Avrix/releases).
+2. 📁 Place the `Avrix-Loader-<version>.jar` file into the root folder of your Project Zomboid installation (client or
+   dedicated server).
+3. 💡 Launch the game via the command line or custom startup script:
 
 ```bash
-java "-Djdk.attach.allowAttachSelf=true" -XX:+EnableDynamicAgentLoading -jar ./Avrix-Loader-X.X.X.jar
+java -jar ./Avrix-Loader-2.1.0.jar
 ```
 
-## 🤝 Contribute
+*For dedicated servers with Steam integration disabled, append `-nosteam`:*
 
-We welcome any help in the development of this project! How can you help:
+```bash
+java -jar ./Avrix-Loader-2.1.0.jar -nosteam
+```
 
-- 🧪 **Test** - install the loader and just play. Mods are not necessary to install, so you will help find hidden bugs.
-  If something turns up, please report it to [Issue](https://github.com/Brov3r/Avrix/issues) so that other developers
-  know what needs to be fixed.
-- 🔌 **[Create plugins](https://github.com/search?q=avrix-loader&type=repositories)** - is a good way to develop our
-  community and bring new functionality to the game.
-- 💻 **Take part in the development** - you can always create a fork and make corrections by sending them for
-  acceptance [pull request](https://github.com/Brov3r/Avrix/pulls).
-- 💬 **Join our community at [Discord](https://discord.gg/PdYtyJMTZN)** - we want to create a healthy community of
-  enthusiastic developers where everyone can learn something and find new friends.
+> [!NOTE]
+> **Logging Level:** You can adjust the loader log verbosity using the `-Dconsole.level=TRACE` (or `DEBUG`, `INFO`,
+`WARN`, `ERROR`) JVM flag: ``java -Dconsole.level=TRACE -jar ./Avrix-Loader-2.1.0.jar``
+>
+>
+> **Raw Game Logs:** Pass the `--no-redirect-log` flag to disable Avrix stream interception and restore default Project
+> Zomboid console output: ``java -jar ./Avrix-Loader-2.1.0.jar --no-redirect-log``
+
+## 🤝 Contributing
+
+Contributions are always welcome! Here is how you can help:
+
+- 🧪 **Testing:** Install Avrix and run your server or client. If you encounter an unexpected crash or issue, please
+  report it on [GitHub Issues](https://github.com/Brov3r/Avrix/issues).
+- 🔌 **Build Plugins:** Create new mods and plugins for the community and share them on GitHub.
+- 💻 **Code Contributions:** Fork the repository, create a feature branch, and submit
+  a [Pull Request](https://github.com/Brov3r/Avrix/pulls).
+- 💬 **Join Discord:** Connect with other modders, get support, and discuss development in
+  our [Discord Community](https://discord.gg/PdYtyJMTZN).
 
 ## ⚖️ License
 
-This project is licensed under [MIT license](./LICENSE).
+This project is licensed under the [MIT License](./LICENSE).
