@@ -9,12 +9,13 @@ import org.junit.jupiter.api.io.TempDir;
 import org.spongepowered.configurate.ConfigurationNode;
 import org.spongepowered.configurate.yaml.YamlConfigurationLoader;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.IOException;
-import java.io.StringReader;
+import java.io.*;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.jar.JarEntry;
@@ -23,168 +24,238 @@ import java.util.jar.JarOutputStream;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+/**
+ * Unit test suite for {@link Metadata} record, builder, and deserialization routines.
+ */
 @DisplayName("Metadata Unit Tests")
 class MetadataTest {
 
     private static final int SCHEMA = Constants.METADATA_SCHEMA;
 
     @Nested
-    @DisplayName("Constructor & Getters")
+    @DisplayName("Constructor & Immutability Tests")
     class ConstructorTests {
 
         @Test
-        @DisplayName("Should create instance and return correct values")
+        @DisplayName("Should create instance and retain exact values")
         void shouldCreateInstance() {
-            var deps = Map.of("core", ">=1.0.0");
+            var dependencies = Map.of("core-plugin", ">=1.0.0");
             var authors = List.of("Author One", "Author Two");
+            var contacts = List.of("dev@example.com");
             var mixins = List.of("mixins.core.class");
 
             var meta = new Metadata(
-                    SCHEMA, "Test Plugin", "A test plugin", "test-plugin", "1.2.3",
-                    Environment.SERVER, authors, "MIT", List.of("dev@example.com"),
-                    deps, "com.example.PluginMain", mixins
+                    SCHEMA,
+                    "Test Plugin",
+                    "A test plugin description",
+                    "test-plugin",
+                    "1.2.3",
+                    Environment.SERVER,
+                    authors,
+                    "MIT",
+                    contacts,
+                    dependencies,
+                    "com.example.PluginMain",
+                    mixins
             );
 
-            assertThat(meta.getSchema()).isEqualTo(SCHEMA);
-            assertThat(meta.getName()).isEqualTo("Test Plugin");
-            assertThat(meta.getDescription()).isEqualTo("A test plugin");
-            assertThat(meta.getId()).isEqualTo("test-plugin");
-            assertThat(meta.getVersion()).isEqualTo("1.2.3");
-            assertThat(meta.getEnvironment()).isEqualTo(Environment.SERVER);
-            assertThat(meta.getAuthors()).containsExactly("Author One", "Author Two");
-            assertThat(meta.getLicense()).isEqualTo("MIT");
-            assertThat(meta.getContacts()).containsExactly("dev@example.com");
-            assertThat(meta.getDependencies()).containsEntry("core", ">=1.0.0");
-            assertThat(meta.getEntrypoint()).isEqualTo("com.example.PluginMain");
-            assertThat(meta.getMixins()).containsExactly("mixins.core.class");
+            assertThat(meta.schema()).isEqualTo(SCHEMA);
+            assertThat(meta.name()).isEqualTo("Test Plugin");
+            assertThat(meta.description()).isEqualTo("A test plugin description");
+            assertThat(meta.id()).isEqualTo("test-plugin");
+            assertThat(meta.version()).isEqualTo("1.2.3");
+            assertThat(meta.environment()).isEqualTo(Environment.SERVER);
+            assertThat(meta.authors()).containsExactly("Author One", "Author Two");
+            assertThat(meta.license()).isEqualTo("MIT");
+            assertThat(meta.contacts()).containsExactly("dev@example.com");
+            assertThat(meta.dependencies()).containsEntry("core-plugin", ">=1.0.0");
+            assertThat(meta.entrypoint()).isEqualTo("com.example.PluginMain");
+            assertThat(meta.mixins()).containsExactly("mixins.core.class");
         }
 
         @Test
-        @DisplayName("Should return unmodifiable collections")
+        @DisplayName("Should return strictly unmodifiable collections")
         void shouldReturnUnmodifiableCollections() {
             var meta = new Metadata(
-                    SCHEMA, "Name", "Desc", "id", "1.0", Environment.BOTH,
-                    List.of("A"), "MIT", List.of("C"), Map.of("D", "1.0"),
-                    "EntryPoint", List.of("Mixin")
+                    SCHEMA,
+                    "Name",
+                    "Desc",
+                    "plugin-id",
+                    "1.0.0",
+                    Environment.BOTH,
+                    List.of("Author"),
+                    "MIT",
+                    List.of("contact@example.com"),
+                    Map.of("dep", "1.0"),
+                    "com.example.Main",
+                    List.of("mixin.json")
             );
 
-            assertThatThrownBy(() -> meta.getAuthors().add("Hacker"))
+            assertThatThrownBy(() -> meta.authors().add("Unauthorized"))
                     .isInstanceOf(UnsupportedOperationException.class);
-            assertThatThrownBy(() -> meta.getContacts().clear())
+            assertThatThrownBy(() -> meta.contacts().clear())
                     .isInstanceOf(UnsupportedOperationException.class);
-            assertThatThrownBy(() -> meta.getDependencies().put("X", "Y"))
+            assertThatThrownBy(() -> meta.dependencies().put("key", "val"))
                     .isInstanceOf(UnsupportedOperationException.class);
-            assertThatThrownBy(() -> meta.getMixins().removeFirst())
+            assertThatThrownBy(() -> meta.mixins().remove(0))
                     .isInstanceOf(UnsupportedOperationException.class);
         }
     }
 
     @Nested
-    @DisplayName("Builder")
+    @DisplayName("Builder Tests")
     class BuilderTests {
 
         @Test
-        @DisplayName("Should build valid metadata with minimal fields")
+        @DisplayName("Should construct valid metadata with minimal required fields and fallback defaults")
         void shouldBuildWithMinimalFields() {
             var meta = new Metadata.Builder()
                     .schema(SCHEMA)
                     .id("minimal-id")
-                    .name("Minimal")
+                    .name("Minimal Plugin")
                     .version("0.1.0")
                     .build();
 
-            assertThat(meta.getId()).isEqualTo("minimal-id");
-            assertThat(meta.getEnvironment()).isEqualTo(Environment.BOTH); // default
-            assertThat(meta.getAuthors()).isEmpty();
-            assertThat(meta.getDependencies()).isEmpty();
+            assertThat(meta.id()).isEqualTo("minimal-id");
+            assertThat(meta.name()).isEqualTo("Minimal Plugin");
+            assertThat(meta.version()).isEqualTo("0.1.0");
+            assertThat(meta.environment()).isEqualTo(Environment.BOTH);
+            assertThat(meta.description()).isEmpty();
+            assertThat(meta.license()).isEqualTo("UNLICENSED");
+            assertThat(meta.entrypoint()).isEmpty();
+            assertThat(meta.authors()).isEmpty();
+            assertThat(meta.contacts()).isEmpty();
+            assertThat(meta.dependencies()).isEmpty();
+            assertThat(meta.mixins()).isEmpty();
         }
 
         @Test
-        @DisplayName("Should fail on unsupported schema version")
+        @DisplayName("Should fail on unsupported metadata schema version")
         void shouldFailOnWrongSchema() {
             assertThatThrownBy(() -> new Metadata.Builder()
                     .schema(999)
-                    .id("id").name("name").version("1.0")
+                    .id("plugin-id")
+                    .name("Plugin Name")
+                    .version("1.0.0")
                     .build())
-                    .isInstanceOf(RuntimeException.class)
+                    .isInstanceOf(IllegalArgumentException.class)
                     .hasMessageContaining("Unsupported metadata schema version");
         }
 
         @Test
-        @DisplayName("Should fail on missing required fields")
+        @DisplayName("Should fail on missing or blank required fields")
         void shouldFailOnMissingFields() {
-            var base = new Metadata.Builder().schema(SCHEMA);
+            // Missing ID (null)
+            assertThatThrownBy(() -> new Metadata.Builder()
+                    .schema(SCHEMA)
+                    .name("Name")
+                    .version("1.0.0")
+                    .build())
+                    .isInstanceOf(NullPointerException.class)
+                    .hasMessageContaining("Plugin 'id' cannot be null");
 
-            assertThatThrownBy(base::build)
-                    .hasMessageContaining("'id' cannot be null");
-            assertThatThrownBy(() -> base.id("id").build())
-                    .hasMessageContaining("'name' cannot be null");
-            assertThatThrownBy(() -> base.id("id").name("name").build())
-                    .hasMessageContaining("'version' cannot be null");
-            assertThatThrownBy(() -> base.id("id").name("name").version("  ").build())
-                    .hasMessageContaining("'version' cannot be null");
+            // Blank ID
+            assertThatThrownBy(() -> new Metadata.Builder()
+                    .schema(SCHEMA)
+                    .id("   ")
+                    .name("Name")
+                    .version("1.0.0")
+                    .build())
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("Plugin 'id' cannot be blank");
+
+            // Missing Name (null)
+            assertThatThrownBy(() -> new Metadata.Builder()
+                    .schema(SCHEMA)
+                    .id("valid-id")
+                    .version("1.0.0")
+                    .build())
+                    .isInstanceOf(NullPointerException.class)
+                    .hasMessageContaining("Plugin 'name' cannot be null");
+
+            // Missing Version (null)
+            assertThatThrownBy(() -> new Metadata.Builder()
+                    .schema(SCHEMA)
+                    .id("valid-id")
+                    .name("Valid Name")
+                    .build())
+                    .isInstanceOf(NullPointerException.class)
+                    .hasMessageContaining("Plugin 'version' cannot be null");
+
+            // Blank Version
+            assertThatThrownBy(() -> new Metadata.Builder()
+                    .schema(SCHEMA)
+                    .id("valid-id")
+                    .name("Valid Name")
+                    .version("   ")
+                    .build())
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("Plugin 'version' cannot be blank");
         }
 
         @Test
-        @DisplayName("Should defensively copy collections")
+        @DisplayName("Should defensively copy collections passed to builder")
         void shouldDefensivelyCopyCollections() {
-            var authors = new java.util.ArrayList<>(List.of("Original"));
-            var deps = new java.util.HashMap<>(Map.of("dep", "1.0"));
+            var mutableAuthors = new ArrayList<>(List.of("Original Author"));
+            var mutableDependencies = new HashMap<>(Map.of("dep-a", "1.0.0"));
 
             var builder = new Metadata.Builder()
                     .schema(SCHEMA)
-                    .id("id").name("name").version("1.0")
-                    .authors(authors)
-                    .dependencies(deps);
+                    .id("defensive-id")
+                    .name("Defensive Name")
+                    .version("1.0.0")
+                    .authors(mutableAuthors)
+                    .dependencies(mutableDependencies);
 
-            // Modify originals
-            authors.add("Hacker");
-            deps.put("evil", "666");
+            mutableAuthors.add("Intruder");
+            mutableDependencies.put("malicious-dep", "6.6.6");
 
             var meta = builder.build();
 
-            assertThat(meta.getAuthors()).containsOnly("Original");
-            assertThat(meta.getDependencies()).doesNotContainKey("evil");
+            assertThat(meta.authors()).containsExactly("Original Author");
+            assertThat(meta.dependencies()).doesNotContainKey("malicious-dep");
         }
 
         @Test
-        @DisplayName("Should support varargs and add methods")
+        @DisplayName("Should support fluent varargs and single-element addition")
         void shouldSupportConvenienceMethods() {
             var meta = new Metadata.Builder()
                     .schema(SCHEMA)
-                    .id("id").name("name").version("1.0")
-                    .authors("A1", "A2")
-                    .addAuthor("A3")
-                    .contacts("c1@example.com")
-                    .addContact("c2@example.com")
-                    .addDependency("lib-a", ">=2.0")
-                    .addDependency("lib-b", "^1.0")
-                    .mixins("mixin.a.class", "mixin.b.class")
-                    .addMixin("mixin.c.class")
+                    .id("convenience-id")
+                    .name("Convenience Name")
+                    .version("1.0.0")
+                    .authors("Author A", "Author B")
+                    .addAuthor("Author C")
+                    .contacts("contact1@example.com")
+                    .addContact("contact2@example.com")
+                    .addDependency("lib-core", ">=2.0.0")
+                    .addDependency("lib-ext", "^1.0.0")
+                    .mixins("mixin.a.json", "mixin.b.json")
+                    .addMixin("mixin.c.json")
                     .build();
 
-            assertThat(meta.getAuthors()).containsExactly("A1", "A2", "A3");
-            assertThat(meta.getContacts()).containsExactly("c1@example.com", "c2@example.com");
-            assertThat(meta.getDependencies())
-                    .containsEntry("lib-a", ">=2.0")
-                    .containsEntry("lib-b", "^1.0");
-            assertThat(meta.getMixins()).hasSize(3);
+            assertThat(meta.authors()).containsExactly("Author A", "Author B", "Author C");
+            assertThat(meta.contacts()).containsExactly("contact1@example.com", "contact2@example.com");
+            assertThat(meta.dependencies())
+                    .containsEntry("lib-core", ">=2.0.0")
+                    .containsEntry("lib-ext", "^1.0.0");
+            assertThat(meta.mixins()).containsExactly("mixin.a.json", "mixin.b.json", "mixin.c.json");
         }
     }
 
     @Nested
-    @DisplayName("fromNode")
+    @DisplayName("fromNode YAML Deserialization Tests")
     class FromNodeTests {
 
-        private ConfigurationNode loadNode(String yaml) throws IOException {
+        private ConfigurationNode loadYamlNode(String yamlContent) throws IOException {
             var loader = YamlConfigurationLoader.builder()
-                    .source(() -> new BufferedReader(new StringReader(yaml)))
+                    .source(() -> new BufferedReader(new StringReader(yamlContent)))
                     .build();
             return loader.load();
         }
 
         @Test
-        @DisplayName("Should parse complete metadata from YAML node")
+        @DisplayName("Should parse complete metadata descriptor from YAML structure")
         void shouldParseCompleteNode() throws IOException {
             var yaml = """
                     schema: %d
@@ -208,92 +279,107 @@ class MetadataTest {
                       - mixins.parsed.class
                     """.formatted(SCHEMA);
 
-            var node = loadNode(yaml);
+            var node = loadYamlNode(yaml);
             var meta = Metadata.fromNode(node);
 
-            assertThat(meta.getId()).isEqualTo("parsed-plugin");
-            assertThat(meta.getName()).isEqualTo("Parsed Plugin");
-            assertThat(meta.getVersion()).isEqualTo("2.5.1");
-            assertThat(meta.getEnvironment()).isEqualTo(Environment.CLIENT);
-            assertThat(meta.getEntrypoint()).isEqualTo("com.example.ParsedEntrypoint");
-            assertThat(meta.getAuthors()).containsExactly("Dev One", "Dev Two");
-            assertThat(meta.getDependencies())
+            assertThat(meta.schema()).isEqualTo(SCHEMA);
+            assertThat(meta.id()).isEqualTo("parsed-plugin");
+            assertThat(meta.name()).isEqualTo("Parsed Plugin");
+            assertThat(meta.description()).isEqualTo("Parsed from YAML");
+            assertThat(meta.version()).isEqualTo("2.5.1");
+            assertThat(meta.environment()).isEqualTo(Environment.CLIENT);
+            assertThat(meta.entrypoint()).isEqualTo("com.example.ParsedEntrypoint");
+            assertThat(meta.license()).isEqualTo("Apache-2.0");
+            assertThat(meta.authors()).containsExactly("Dev One", "Dev Two");
+            assertThat(meta.contacts()).containsExactly("https://example.com", "mail@example.com");
+            assertThat(meta.dependencies())
                     .containsEntry("core-lib", ">=1.0.0")
                     .containsEntry("optional-dep", "^2.3");
-            assertThat(meta.getMixins()).containsExactly("mixins.parsed.class");
+            assertThat(meta.mixins()).containsExactly("mixins.parsed.class");
         }
 
         @Test
-        @DisplayName("Should handle wildcard environment as BOTH")
+        @DisplayName("Should resolve wildcard environment string to Environment.BOTH")
         void shouldHandleWildcardEnvironment() throws IOException {
             var yaml = """
                     schema: %d
-                    id: id
-                    name: name
-                    version: 1.0
+                    id: wildcard-plugin
+                    name: Wildcard
+                    version: 1.0.0
                     environment: "*"
                     """.formatted(SCHEMA);
 
-            var node = loadNode(yaml);
+            var node = loadYamlNode(yaml);
             var meta = Metadata.fromNode(node);
 
-            assertThat(meta.getEnvironment()).isEqualTo(Environment.BOTH);
+            assertThat(meta.environment()).isEqualTo(Environment.BOTH);
         }
 
         @Test
-        @DisplayName("Should handle missing optional fields")
+        @DisplayName("Should populate defaults for omitted optional fields")
         void shouldHandleMissingOptionalFields() throws IOException {
             var yaml = """
                     schema: %d
-                    id: minimal
-                    name: Minimal
+                    id: minimal-node
+                    name: Minimal Node
                     version: 1.0.0
                     """.formatted(SCHEMA);
 
-            var node = loadNode(yaml);
+            var node = loadYamlNode(yaml);
             var meta = Metadata.fromNode(node);
 
-            assertThat(meta.getDescription()).isNull();
-            assertThat(meta.getAuthors()).isEmpty();
-            assertThat(meta.getDependencies()).isEmpty();
-            assertThat(meta.getMixins()).isEmpty();
+            assertThat(meta.id()).isEqualTo("minimal-node");
+            assertThat(meta.description()).isEmpty();
+            assertThat(meta.license()).isEqualTo("UNLICENSED");
+            assertThat(meta.entrypoint()).isEmpty();
+            assertThat(meta.authors()).isEmpty();
+            assertThat(meta.contacts()).isEmpty();
+            assertThat(meta.dependencies()).isEmpty();
+            assertThat(meta.mixins()).isEmpty();
         }
     }
 
     @Nested
-    @DisplayName("fromGameProvider")
+    @DisplayName("fromGameProvider Mapping Tests")
     class FromGameProviderTests {
 
         @Test
-        @DisplayName("Should map GameProvider fields to Metadata")
+        @DisplayName("Should synthesize valid Metadata from active GameProvider")
         void shouldMapProviderFields() {
             var provider = new TestGameProvider(
-                    "prov-id", "Provider Plugin", "3.2.1",
-                    Environment.CLIENT, "com.prov.Entrypoint",
-                    List.of("ProvDev"), "MIT", List.of("prov@example.com")
+                    "project-zomboid",
+                    "Project Zomboid",
+                    "42.20.2",
+                    Environment.CLIENT,
+                    "zombie.gameStates.MainScreenState",
+                    List.of("The Indie Stone"),
+                    "PROPRIETARY",
+                    List.of("https://projectzomboid.com")
             );
 
             var meta = Metadata.fromGameProvider(provider);
 
-            assertThat(meta.getId()).isEqualTo("prov-id");
-            assertThat(meta.getName()).isEqualTo("Provider Plugin");
-            assertThat(meta.getVersion()).isEqualTo("3.2.1");
-            assertThat(meta.getEnvironment()).isEqualTo(Environment.CLIENT);
-            assertThat(meta.getEntrypoint()).isEqualTo("com.prov.Entrypoint");
-            assertThat(meta.getAuthors()).containsExactly("ProvDev");
-            assertThat(meta.getLicense()).isEqualTo("MIT");
+            assertThat(meta.schema()).isEqualTo(SCHEMA);
+            assertThat(meta.id()).isEqualTo("project-zomboid");
+            assertThat(meta.name()).isEqualTo("Project Zomboid");
+            assertThat(meta.version()).isEqualTo("42.20.2");
+            assertThat(meta.environment()).isEqualTo(Environment.CLIENT);
+            assertThat(meta.entrypoint()).isEqualTo("zombie.gameStates.MainScreenState");
+            assertThat(meta.authors()).containsExactly("The Indie Stone");
+            assertThat(meta.license()).isEqualTo("PROPRIETARY");
+            assertThat(meta.contacts()).containsExactly("https://projectzomboid.com");
         }
     }
 
     @Nested
-    @DisplayName("File Loading")
+    @DisplayName("File & JAR Loading Tests")
     class FileLoadingTests {
 
         @TempDir
         Path tempDir;
 
         @Test
-        @DisplayName("Should load metadata from YAML file")
+        @DisplayName("Should load metadata descriptor directly from YAML file on disk")
         void shouldLoadFromYamlFile() throws IOException {
             var yamlPath = tempDir.resolve("plugin.yml");
             var content = """
@@ -305,40 +391,41 @@ class MetadataTest {
                     authors: [FileAuthor]
                     """.formatted(SCHEMA);
 
-            java.nio.file.Files.writeString(yamlPath, content, StandardCharsets.UTF_8);
+            Files.writeString(yamlPath, content, StandardCharsets.UTF_8);
 
             var meta = Metadata.fromYaml(yamlPath);
 
-            assertThat(meta.getId()).isEqualTo("file-plugin");
-            assertThat(meta.getVersion()).isEqualTo("4.0.0");
-            assertThat(meta.getAuthors()).containsExactly("FileAuthor");
+            assertThat(meta.id()).isEqualTo("file-plugin");
+            assertThat(meta.version()).isEqualTo("4.0.0");
+            assertThat(meta.authors()).containsExactly("FileAuthor");
+            assertThat(meta.entrypoint()).isEqualTo("com.file.Main");
         }
 
         @Test
-        @DisplayName("Should load metadata from JAR entry")
+        @DisplayName("Should load metadata manifest from inside a physical JAR archive")
         void shouldLoadFromJarEntry() throws IOException {
-            var jarPath = createTempJarWithMetadata();
-            var meta = Metadata.fromJarFile(jarPath, "plugin.yml");
+            var jarFile = createTempJarWithMetadata("plugin.yml");
+            var meta = Metadata.fromJarFile(jarFile, "plugin.yml");
 
-            assertThat(meta.getId()).isEqualTo("jar-plugin");
-            assertThat(meta.getName()).isEqualTo("JAR Plugin");
-            assertThat(meta.getEntrypoint()).isEqualTo("com.jar.Main");
+            assertThat(meta.id()).isEqualTo("jar-plugin");
+            assertThat(meta.name()).isEqualTo("JAR Plugin");
+            assertThat(meta.entrypoint()).isEqualTo("com.jar.Main");
         }
 
         @Test
-        @DisplayName("Should throw FileNotFoundException for missing entry")
+        @DisplayName("Should fail with FileNotFoundException when requested manifest entry is missing in JAR")
         void shouldFailOnMissingJarEntry() throws IOException {
-            var jarPath = createTempJarWithMetadata();
+            var jarFile = createTempJarWithMetadata("plugin.yml");
 
-            assertThatThrownBy(() -> Metadata.fromJarFile(jarPath, "nonexistent.yml"))
-                    .isInstanceOf(java.io.FileNotFoundException.class)
-                    .hasMessageContaining("Metadata entry not found");
+            assertThatThrownBy(() -> Metadata.fromJarFile(jarFile, "nonexistent.yml"))
+                    .isInstanceOf(FileNotFoundException.class)
+                    .hasMessageContaining("not found in JAR");
         }
 
-        private File createTempJarWithMetadata() throws IOException {
+        private File createTempJarWithMetadata(String entryName) throws IOException {
             var jarFile = tempDir.resolve("test-plugin.jar").toFile();
-            try (var jos = new JarOutputStream(java.nio.file.Files.newOutputStream(jarFile.toPath()))) {
-                var entry = new JarEntry("plugin.yml");
+            try (var jos = new JarOutputStream(Files.newOutputStream(jarFile.toPath()))) {
+                var entry = new JarEntry(entryName);
                 jos.putNextEntry(entry);
                 var content = """
                         schema: %d
@@ -355,13 +442,17 @@ class MetadataTest {
     }
 
     /**
-     * Simple test implementation of GameProvider for testing purposes.
-     * Replace with real implementation or anonymous class as needed.
+     * Minimal stub implementation of {@link GameProvider} for unit testing purposes.
      */
-    private static class TestGameProvider implements GameProvider {
-        private final String id, name, version, entrypoint, license;
+    private static final class TestGameProvider implements GameProvider {
+        private final String id;
+        private final String name;
+        private final String version;
         private final Environment env;
-        private final List<String> authors, contacts;
+        private final String entrypoint;
+        private final List<String> authors;
+        private final String license;
+        private final List<String> contacts;
 
         TestGameProvider(String id, String name, String version, Environment env,
                          String entrypoint, List<String> authors, String license, List<String> contacts) {
@@ -381,13 +472,11 @@ class MetadataTest {
         }
 
         @Override
-        public void init(BaseClassLoader classLoader) {
-
+        public void init() {
         }
 
         @Override
         public void launch(String[] args) {
-
         }
 
         @Override
@@ -407,12 +496,12 @@ class MetadataTest {
 
         @Override
         public String getRawVersion() {
-            return "";
+            return version;
         }
 
         @Override
         public Path getLaunchDirectory() {
-            return null;
+            return Paths.get(".").toAbsolutePath().normalize();
         }
 
         @Override
